bdr.BDR2.scala.error
Erreur de compilation :
BDR2:5: error: type mismatch;
 found   : Unit
 required: Int
  case x if x=="E" => avance();
                            ^